2014-07-21  Karl Berry  <karl@tug.org>

	* fontmap.c (fontmap_parse_mapdef_dps): ignore the second <
	in << in a map file line (just like the [ in <[ has always been
	ignored).
	* Makefile.am (EXTRA_DIST): add fullmap.tex and .dvi,
        just for documentation/future purposes, not executed as a new test.
       Report from Ulrike Fischer, 4 Jun 2014 11:15:06 +0200,
       http://tug.org/pipermail/tex-live/2014-June/035486.html

2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* cmap_read.c: Avoid cast from pointer to integer of different
	size on 64-bit Windows.

2014-06-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_dvips.c: Use rungs instead of gswin32c in order to support
	both of gswin32c and gswin64c (Windows only).

2014-06-21  Khaled Hosny  <khaledhosny@eglug.org>

	* pdfdoc.c: Set PDF Docinfo's /Producer string from pdf:docinfo if
	supplied (http://sourceforge.net/p/xetex/bugs/93/).

2014-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* agl.c, cid.c, dpxfile.c, dpxutil.c, dvipdfmx.c, epdf.c,
	fontmap.c, mpost.c, otl_conf.c, otl_opt.c, pdfnames.c,
	pdfparse.c, spc_dvips.c, spc_html.c, spc_misc.c, specials.c,
	subfont.c: Avoid undefined behaviour when char is signed.

2014-06-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xbb.c: Check kpse_in_name_ok and kpse_out_name_ok in extractbb.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2014-05-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: disable warnings in the case of -q option.

2014-05-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfobj.[ch] (pdf_unshift_array): Bug fix: correctly copy array
	elements, using memmove().  Declare pdf_unshift_array as static.
	Bug reported by Richard M Kreuter <kreuter@progn.net>.

2014-05-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bmpimage.c: Error exit instead of crashing for unsupported
	bmp inclusion in bmp_include_image().

2014-05-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
